Page login & register bien avancée, page ajout NFT ébauchée

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,3 +5,7 @@ $obscur: #190B2D;
 $bright: #FFFFFF;
 $gradient: #843BE2;
 $gradient-hover: #6B10FF;
+$placeholder-grey: #4E4E4E;
+
+// en attendant variables des tailles :
+$body_small: 14px;
