--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -49,6 +49,17 @@ $theme-colors: (
   font-size: 1.5rem;
   font-weight: 500;
 }
+.heading-3-bold {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.nav-link {
+  font-weight: 500;
+  font-size: 1.125rem
+}
+.nav-puce{
+  list-style-type: none;
+}
 .baseline {
   font-size: 24px;
 }
@@ -65,16 +76,174 @@ $theme-colors: (
   }
 }
 
-.header-img {
-  img {
-  width: 90%;
-  }
+.spacing {
+  margin : 7rem 0 0 0;
 }
-
 .section-explanations {
   background-color: $obscur;
   color: $bright;
-  margin: 10rem 0 10rem 0;
+  margin: 10rem 0 0 0;
   text-align: center;
   ;
 }
+
+.circle {
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  border: none;
+    img{
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+}
+.card-trending {
+  
+  .card-radius{
+    -webkit-box-shadow: 4px 4px 50px 0px rgba(0,0,0,0.16); 
+    box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.12);
+    border-radius: 20px;
+    border: 1px solid;
+    border-color: rgba(78, 78, 78, 0.50);
+  }
+
+  .img-radius{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+  .icon {
+    width: 24px;
+  }
+  p {
+    font-size: 1.125rem;
+  }
+}
+
+.card-category {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(200px, 1fr));
+  grid-gap: 24px;
+  grid-template-rows: repeat(2, 34vh);
+    a {
+      text-decoration:none; 
+    }
+    .element-1 {
+      grid-row: 1 /span 2;
+      grid-column: 1 / 2;
+      background: linear-gradient(180deg, rgba(255,255,255,0) 50%, rgba(0,0,0,1) 120%), url(/public/assets/img/art.png);
+      background-repeat: no-repeat, no-repeat;
+      background-position: center; 
+      background-size: cover;
+      border-radius: 10px;
+    }
+    .element-2 {
+      grid-row: 1 / 2;
+      grid-column: 2 / 3;
+      background: linear-gradient(180deg, rgba(255,255,255,0) 50%, rgba(0,0,0,1) 120%), url(/public/assets/img/metaverse.JPG);
+      background-repeat: no-repeat, no-repeat;
+      background-position: top center; 
+      background-size: cover;
+      border-radius: 10px;
+    }
+    .element-3 {
+      grid-row: 1 / 2;
+      grid-column: 3 / 4;
+      background: linear-gradient(180deg, rgba(255,255,255,0) 50%, rgba(0,0,0,1) 120%), url(/public/assets/img/photography.jpg);
+      background-repeat: no-repeat, no-repeat;
+      background-position: center; 
+      background-size: cover; 
+      border-radius: 10px;
+    }
+    .element-4 {
+      grid-row: 2 / 3;
+      grid-column: 2 / 3;
+      background: linear-gradient(180deg, rgba(255,255,255,0) 50%, rgba(0,0,0,1) 120%), url(/public/assets/img/music.JPG);;
+      background-repeat: no-repeat, no-repeat;
+      background-position: top center; 
+      background-size: cover;
+      border-radius: 10px;
+    }
+    .element-5 {
+      grid-row: 2 / 3;
+      grid-column: 3 / 4;
+      background: linear-gradient(180deg, rgba(255,255,255,0) 50%, rgba(0,0,0,1) 120%), url(/public/assets/img/sport.JPG);
+      background-repeat: no-repeat, no-repeat;
+      background-position: center; 
+      background-size: cover;
+      border-radius: 10px;
+    }
+}
+.preFooterManagement{
+  background-color: $light-purple;
+    .preFooterManagement__title {
+      color: $obscur;
+      font-size: 24px;
+      font-weight: bold;
+    }
+    p{
+      font-size: 20px;
+      text-align: center;
+    }
+    .btn-gradient {
+      letter-spacing: 0.6px ;
+      background: linear-gradient(289deg, rgba(132,59,226,1) 0%, rgba(107,16,255,1) 100%);
+      }
+      .btn {
+        font-size: 1.125rem;
+        font-weight: 600;
+        border-radius: 12px;
+        padding: 16px 40px 16px 40px;
+      }
+}
+
+.footerManagement{
+  background-color: $obscur;
+    p{
+      font-size: 16px;
+      color: white;
+      text-align: center;
+    }
+}
+
+@media (max-width: 576px) { 
+  :root {
+    font-size: 14px;
+  }
+  .header-img {
+    img {
+      width: 90%;
+    }
+  }
+  .section-header  {
+    .align-text {
+      text-align:center;
+    }
+  }
+  .card-category {
+    grid-template-columns: repeat(2, 44vw);
+    grid-gap: 16px;
+    grid-template-rows: (56vh 28vh 28vh);
+      .element-1 {
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+      }
+      .element-2 {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
+      }
+      .element-3 {
+        grid-row: 2 / 3;
+        grid-column: 2 / 3;
+      }
+      .element-4 {
+        grid-row: 3 / 4;
+        grid-column: 1 / 2;
+      }
+      .element-5 {
+        grid-row: 3 / 4;
+        grid-column: 2 / 3;
+      }
+  }
+  }
