inscription faite. Export ne marche pas

--- a/views/album/create.ejs
+++ b/views/album/create.ejs
@@ -20,6 +20,7 @@
         <label for="title">Titre</label>
         <input 
           type="text" 
+          value="Titre" 
           name="title" 
           id="title"/>
       </div>
@@ -28,16 +29,18 @@
         <label for="author">Auteur</label>
         <input 
           type="text" 
+          value="Auteur" 
           name="author" 
           id="author"/>
       </div>
 
       <div>
-        <label for="date">Date</label>
+        <label for="publishedAt">Date</label>
         <input 
-          type="text" 
-          name="date" 
-          id="date"/>
+          type="date" 
+          value="1960" 
+          name="publishedAt" 
+          id="publishedAt"/>
       </div>
 
       <button type="submit">Enregistrer</button>
