--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -6,6 +6,7 @@ $bright: #FFFFFF;
 $placeholder-grey: #4E4E4E;
 $light-grey: #ECECEC;
 $placeholder-grey: #4E4E4E;
-
+$gradient: #843BE2;
+$gradient-hover: #6B10FF;
 // en attendant variables des tailles :
 $body_small: 14px;
