last commit, keep personnal notes

--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -15,7 +15,7 @@
         <% } %>
 
         <!-- two part container -->
-        <div class="row ">
+        <div class="row">
           <!-- image container -->
           <aside class="user_form_bg d-none d-sm-block col-sm-5 col-lg-6 ps-0">
           </aside>
@@ -30,12 +30,12 @@
                   
                   <!-- avatar input -->
                   <div class="px-4">
-                    <label for="avatar" class="d-block mb-2">Pseudo</label>
+                    <label for="avatar" class="d-block mb-2">Avatar</label>
                     <input
                       id="avatar"
                       name="avatar"
                       type="file"
-                      placeholder="Saisir votre pseudo" 
+                      placeholder="Saisir un avatar" 
                       class="w-100"/>
                   </div>
 
