--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -32,7 +32,8 @@
                       name="pseudo"
                       type="text"
                       placeholder="Saisir votre pseudo" 
-                      class="user-form__input w-100"/>
+                      class="user-form__input w-100"
+                      value="User1"/>
                   </div>
 
                   <!-- pwd input -->
@@ -43,7 +44,8 @@
                       name="password"
                       type="text"
                       placeholder="Saisir votre mot de passe" 
-                      class="user-form__input w-100""/>
+                      class="user-form__input w-100"
+                      value="password"/>
                       <a href="#" class="small_purple_link d-block no-decoration">Mot de passe oublié ?</a>
                   </div>
                   
