--- a/views/products/create.ejs
+++ b/views/products/create.ejs
@@ -18,7 +18,7 @@
     <% if(locals.success){ %>
         <p><%= success %></p>
     <%} %>
-    <form action="/products/create" method="POST">
+    <form action="/products/create" method="POST" enctype="multipart/form-data">
         <div>
             <label for="title">Titre</label>
             <input type="text" id="title" name="title">
